set up handlebars header

--- a/views/partials/header.handlebars
+++ b/views/partials/header.handlebars
@@ -2,7 +2,9 @@
   <h1>Card Optimizer</h1>
   <nav>
     <ul>
-      <li><a href="/">Home</a></li>
+      <li><a href="/">
+        <img src="/logo/wallet.png" class="header-btn" alt="wallet">
+      </a></li>
     </ul>
   </nav>
 </header>
