popup and data added

--- a/views/404.handlebars
+++ b/views/404.handlebars
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>404 - Not Found</title>
+    <link rel="stylesheet" href="/styles/mainStyle.css">
 </head>
 <body>
     <h1>404 - Page Not Found</h1>
